# beam

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bsdf.rs  camera.rs  color.rs  intersection.rs  lib.rs  light.rs  lighting.rs  material.rs  math.rs  object.rs  ray.rs  render.rs  sample.rs  scene.rs  texture.rs  vec.rs
src/bsdf/: lambertian.rs  mod.rs  phong.rs
src/color/: linearrgb.rs  mod.rs  srgb.rs
src/desc/: beam.rs  cornell.rs  furnace.beam  furnace.rs  mod.rs  veach.rs
src/desc/edit/: camera.rs  color.rs  geom.rs  material.rs  mod.rs  object.rs  scene.rs  texture.rs  transform.rs
src/exec/: context.rs  error.rs  exp.rs  func.rs  inbuilt.rs  mod.rs  native.rs  parser.rs  tests.rs  value.rs
src/geom/: aabb.rs  blob.rs  disc.rs  mesh.rs  mod.rs  octree.rs  plane.rs  rectangle.rs  sphere.rs  triangle.rs
src/geom/bounds/: mod.rs
src/geom/csg/: difference.rs  merge.rs  mod.rs
src/geom/sdf/: mod.rs
src/import/: mod.rs  obj.rs
src/import/gltf/: mod.rs
src/import/image/: mod.rs
src/indexed/: mod.rs
src/ui/: mod.rs
src/ui/pixel/: mod.rs
src/ui/system/: mod.rs
