[package]
name = "beam"
version = "0.1.0"
authors = ["Kezenator <github@kezenator.com>"]
edition = "2018"

[dependencies]
copypasta = { version = "0.8.2" }
crossbeam = { version = "0.8.0" }
float-ord = { version = "0.3.0" }
glium = { version = "0.32.1" }
gltf = { version = "1.3.0" }
image = { version = "0.24.7" }
imgui = { version = "0.11.0", features = ["docking", "tables-api"] }
imgui-glium-renderer = { version = "0.11.0" }
imgui-winit-support = { version = "0.11.0" }
itertools = { version = "0.10.0" }
notify = { version = "4.0.16" }
num_cpus = { version = "1.13.0" }
rand = { version = "0.8.3", features = ["small_rng"] }
winit = { version = "0.27.5" }
vek = { version = "0.15.0" }

